--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -10,6 +10,9 @@
       padding: 20px;
       gap: 20px;
     }
+    .videoContainer {
+      padding: 20px;
+    }
 
     .charts {
       padding: 5px 20px;
