--- a/src/pages/new/new.scss
+++ b/src/pages/new/new.scss
@@ -21,8 +21,8 @@
         flex: 1;
         text-align: center;
         img {
-          width: 100px;
-          height: 100px;
+          width: 200px;
+          height: 200px;
           border-radius: 50%;
           object-fit: cover;
         }
@@ -34,20 +34,15 @@
           display: flex;
           flex-wrap: wrap;
           gap: 20px;
-          justify-content: space-around;
+          justify-content: space-between;
 
           .getData {
             width: 40%;
             display: flex;
             gap: 10;
             align-items: end;
-
-            .idData {
-            }
-            .stokData {
-              .invisible {
-                display: none;
-              }
+            button {
+              margin-right: 5px;
             }
           }
           .formInput {
@@ -66,8 +61,9 @@
             input {
               width: 100%;
               padding: 5px;
-              border: none;
-              border-bottom: 1px solid grey;
+              border-radius: 5px;
+              margin-top: 5px;
+              border: 1px solid rgba(0, 0, 0, 0.10000000149011612);
             }
           }
           button {
@@ -85,6 +81,10 @@
             &:disabled {
               background-color: #f6b17a;
               cursor: not-allowed;
+            }
+            &:hover {
+              background-color: #ff9359;
+              transition: 0.5s;
             }
           }
         }
