--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -5,33 +5,33 @@
   min-width: 17vh;
   max-width: 20vh;
   background-color: #d1feff;
-
+  
   .top {
     height: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
-
+    
     .logo {
       font-size: 20px;
       font-weight: bold;
       color: #7077a1;
     }
   }
-
+  
   hr {
     height: 0;
     border: 0.5px solid rgb(230, 227, 227);
   }
-
+  
   .center {
     padding-left: 10px;
-
+    
     ul {
       list-style: none;
       margin: 0;
       padding: 0;
-
+      
       .title {
         font-size: 10px;
         font-weight: bold;
@@ -39,13 +39,23 @@
         margin-top: 15px;
         margin-bottom: 5px;
       }
-
+      
+      .nav-item {
+        text-decoration: none;
+        display: flex;
+        &.active {
+          border-left: 2mm ridge #ff772e;
+          border-radius: 2px;
+          background-color: #ffff;
+          width: 100%;
+        }
+      }
       li {
         display: flex;
         align-items: center;
         padding: 5px;
         cursor: pointer;
-
+        
         &:hover {
           background-color: #ece8ff;
         }
