--- a/src/components/datatable/datatable.scss
+++ b/src/components/datatable/datatable.scss
@@ -31,9 +31,7 @@
       height: 100px;
       border-radius: 50%;
       object-fit: cover;
-      margin-right: 20px;
-      margin-top: 10px;
-      margin-bottom: 10px;
+      margin: 10px
     }
   }
 
