--- a/src/pages/new/new.scss
+++ b/src/pages/new/new.scss
@@ -5,7 +5,25 @@
   .newContainer {
     flex: 6;
 
-    .top,
+    .top {
+      -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
+      box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
+      padding: 10px;
+      margin: 20px;
+      display: flex;
+      align-items: center;
+      position: relative;
+
+      h1 {
+        font-size: 20px;
+        color: #b3b9e6;
+      }
+      .top-right {
+        right: 0;
+        margin-right: 20px;
+        position: absolute;
+      }
+    }
     .bottom {
       -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
       box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
@@ -13,10 +31,6 @@
       margin: 20px;
       display: flex;
 
-      h1 {
-        font-size: 20px;
-        color: #b3b9e6;
-      }
       .left {
         flex: 1;
         text-align: center;
@@ -47,6 +61,7 @@
           }
           .formInput {
             width: 40%;
+            margin-right: 20px;
 
             label {
               display: flex;
@@ -65,50 +80,78 @@
               margin-top: 5px;
               border: 1px solid rgba(0, 0, 0, 0.10000000149011612);
             }
+            .error-message {
+              width: 100%;
+              background-color: #f8d7da;
+              color: #721c24;
+              border: 1px solid #f5c6cb;
+              padding: 10px;
+              border-radius: 5px;
+              margin-bottom: 20px;
+              text-align: center;
+            }
           }
-          button {
-            width: 150px;
-            padding: 10px;
-            border: none;
-            border-radius: 5px;
-            background-color: #ff772e;
-            color: white;
-            font-weight: bold;
-            margin-top: 10px;
-            cursor: pointer;
-            transition: 0.5s;
+        }
+      }
+    }
+    .popup {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: rgba(0, 0, 0, 0.5);
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
+      opacity: 0;
+      transition: opacity 0.5s ease-in-out; /* Smooth transition */
+      pointer-events: none; /* Prevent interaction when hidden */
+    }
+    .popup.show {
+      opacity: 1;
+      pointer-events: all; /* Allow interaction when visible */
+    }
 
-            &:disabled {
-              background-color: #f6b17a;
-              cursor: not-allowed;
-            }
-            &:hover {
-              background-color: #ff9359;
-              transition: 0.5s;
-            }
-          }
-        }
-        .popup {
-          position: fixed;
-          top: 50%;
-          left: 50%;
-          transform: translate(-50%, -50%);
-          background-color: rgba(0, 0, 0, 0.5);
-          width: 100%;
-          height: 100%;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          z-index: 9999;
-        }
-      
-        .popup-inner {
-          background-color: white;
-          padding: 20px;
-          border-radius: 10px;
-          box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-          text-align: center;
-        }
+    .popup-inner {
+      background-color: white;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+      display: flex;
+      text-align: justify;
+      flex-direction: column;
+      align-items: center;
+      p {
+        font-weight: bold;
+        margin-bottom: 5px;
+      }
+      img,
+      ul {
+        margin: 0px 10px;
+        margin-bottom: 5px;
+      }
+    }
+    .orange-button {
+      width: 120px;
+      padding: 10px;
+      border: none;
+      border-radius: 5px;
+      background-color: #ff772e;
+      color: white;
+      font-weight: bold;
+      cursor: pointer;
+      transition: 0.5s;
+
+      &:disabled {
+        background-color: #f6b17a;
+        cursor: not-allowed;
+      }
+      &:hover {
+        background-color: #ff9359;
+        transition: 0.5s;
       }
     }
   }
