--- a/src/pages/single/single.scss
+++ b/src/pages/single/single.scss
@@ -11,7 +11,7 @@
       gap: 20px;
 
       .left {
-        flex: 0 1;
+        flex: 1;
         -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
         box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
         padding: 20px;
@@ -22,11 +22,13 @@
           top: 0;
           right: 0;
           padding: 5px;
-          font-size: 12px;
-          color: #7451f8;
+          button {
+            cursor: pointer;
+            font-size: 1vw;
+            border: none;
+            color: #7451f8;
+          }
           background-color: #7551f818;
-          cursor: pointer;
-          border-radius: 0px 0px 0px 5px;
         }
 
         .item {
@@ -37,11 +39,12 @@
             .itemTitle {
               margin-bottom: 10px;
               color: #555;
+              font-size: 3vw;
             }
 
             .detailItem {
               margin-bottom: 10px;
-              font-size: 14px;
+              font-size: 1.4vw;
 
               .itemKey {
                 font-weight: bold;
@@ -56,8 +59,8 @@
           }
 
           .itemImg {
-            width: 200px;
-            height: 300px;
+            width: 32vw;
+            height: 22vw;
             border-radius: 20px;
             object-fit: cover;
           }
@@ -76,7 +79,7 @@
     }
     .title {
       font-size: 16px;
-      color: lightgray;
+      color: gray;
       margin-bottom: 20px;
     }
   }
