--- a/src/pages/single/single.scss
+++ b/src/pages/single/single.scss
@@ -76,11 +76,91 @@
       box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
       padding: 20px;
       margin: 10px 20px;
+      display: flex;
+      flex-direction: column;
+      .up {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+      .down {
+        .popup {
+          position: fixed;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          background-color: rgba(0, 0, 0, 0.5);
+          width: 100%;
+          height: 100%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          z-index: 9999;
+          opacity: 0;
+          transition: opacity 1s ease-in-out; /* Smooth transition */
+          pointer-events: none; /* Prevent interaction when hidden */
+        }
+        .popup.show {
+          opacity: 1;
+          pointer-events: all; /* Allow interaction when visible */
+        }
+
+        .popup-inner {
+          background-color: white;
+          padding: 20px;
+          border-radius: 10px;
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+          display: flex;
+          text-align: justify;
+          flex-direction: column;
+          align-items: center;
+          p {
+            font-weight: bold;
+            margin-bottom: 5px;
+          }
+          .imgContainer {
+            display: flex;
+            img {
+              margin: 5px 5px;
+            }
+          }
+          ul {
+            margin: 0px 10px;
+            margin-bottom: 5px;
+
+            a {
+              color: #ff772e;
+              font-weight: bold;
+              text-decoration: none;
+            }
+          }
+        }
+      }
     }
     .title {
       font-size: 16px;
       color: gray;
       margin-bottom: 20px;
+    }
+    button {
+      cursor: pointer;
+      width: 100px;
+      padding: 10px;
+      border: none;
+      border-radius: 5px;
+      background-color: #ff772e;
+      color: white;
+      font-weight: bold;
+      transition: 0.5s;
+      &:disabled {
+        background-color: #f6b17a;
+        cursor: not-allowed;
+      }
+      &:hover {
+        background-color: #ff9359;
+        transition: 0.5s;
+      }
+      // background-color: #fa9e3418;
     }
   }
 }
