--- a/src/components/datatable/datatable.scss
+++ b/src/components/datatable/datatable.scss
@@ -1,3 +1,4 @@
+@import 'react-confirm-alert/src/react-confirm-alert.css';
 .datatable {
   height: 600px;
   padding: 20px;
@@ -73,4 +74,32 @@
       cursor: pointer;
     }
   }
+}
+.react-confirm-alert-overlay {
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.react-confirm-alert-body {
+  text-align: center;
+  font-family: 'Plus Jakarta Sans';
+  h1{
+    margin-bottom: 5px;
+  }
+}
+
+.react-confirm-alert-button-group  {
+  display: flex;
+  justify-content: center;
+  button{
+    background-color: #250d00;
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    margin: 5px;
+    cursor: pointer;
+  }
+}
+
+.react-confirm-alert-button-group button:hover {
+  background-color: #ff772e;
 }
