--- a/src/pages/new/new.scss
+++ b/src/pages/new/new.scss
@@ -59,6 +59,28 @@
               margin-right: 5px;
             }
           }
+          .formRow {
+            display: flex;
+            width: 25%;
+            flex-direction: column;
+            label {
+              display: flex;
+              align-items: center;
+
+              .icon {
+                cursor: pointer;
+              }
+            }
+
+            input,
+            select {
+              width: 90%;
+              padding: 5px;
+              border-radius: 5px;
+              margin-top: 5px;
+              border: 1px solid rgba(0, 0, 0, 0.10000000149011612);
+            }
+          }
           .formInput {
             width: 40%;
             margin-right: 20px;
@@ -73,7 +95,8 @@
               }
             }
 
-            input {
+            input,
+            select {
               width: 100%;
               padding: 5px;
               border-radius: 5px;
@@ -89,6 +112,9 @@
               border-radius: 5px;
               margin-bottom: 20px;
               text-align: center;
+            }
+            .fullWidth {
+              width: 100%;
             }
           }
         }
@@ -107,7 +133,7 @@
       align-items: center;
       z-index: 9999;
       opacity: 0;
-      transition: opacity 0.5s ease-in-out; /* Smooth transition */
+      transition: opacity 1s ease-in-out; /* Smooth transition */
       pointer-events: none; /* Prevent interaction when hidden */
     }
     .popup.show {
@@ -132,6 +158,12 @@
       ul {
         margin: 0px 10px;
         margin-bottom: 5px;
+
+        a {
+          color: #ff772e;
+          font-weight: bold;
+          text-decoration: none;
+        }
       }
     }
     .orange-button {
