--- a/src/components/video/video.scss
+++ b/src/components/video/video.scss
@@ -17,39 +17,6 @@
       justify-content: center;
       gap: 17px;
       align-items: center;
-      label {
-        text-align: left;
-        font-size: 20px;
-        font-weight: bold;
-        display: flex;
-        color: #8d96cf;
-        // &.nama {
-        //   color: #8d96cf;
-        // }
-
-        // &.merah {
-        //   color: crimson;
-        // }
-
-        // &.hijau {
-        //   color: green;
-        // }
-        // &.biru {
-        //   color: royalblue;
-        // }
-      }
-      input {
-        background-color: #ffffff;
-        height: 60px;
-        -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
-        box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
-        border-radius: 10px;
-        outline: none;
-        border: 0px solid rgba(0, 0, 0, 0.10000000149011612);
-        text-align: center;
-        font-weight: 500;
-        font-size: 16px;
-      }
     }
     .colorPicker {
       padding: 10px;
@@ -57,41 +24,57 @@
     .button {
       flex-direction: row;
       display: flex;
-      gap: 20px;
+      gap: 10px;
       button {
         color: white;
         font-weight: bold;
-        height: 60px;
-        width: 120px;
+        height: 50px;
+        width: 100px;
         border-radius: 10px;
         border-style: none;
-        padding-top: 5px;
-        padding-bottom: 5px;
+        padding: 7px;
         display: flex;
         flex-direction: row;
         justify-content: center;
         cursor: pointer;
         align-items: center;
       }
-      #activate {
-        background-color: #8d96cf;
+      #activate { /* New Button Styles */
+        background-color: #228b22;
+
         &:hover {
-          background-color: #c4cbfc;
-          transition: 0.5s;
+            background-color: #32cd32;
+            transition: 0.5s;
         }
+    }
+    #change {
+      background-color: #ff772e;
+      &:hover {
+        background-color: #ffae82;
+        transition: 0.5s;
       }
-      #change {
-        background-color: #ff772e;
-        &:hover {
-          background-color: #ffae82;
-          transition: 0.5s;
-        }
+      &:disabled {
+        cursor: not-allowed;
       }
-      #reset {
+    }
+    #reset {
+      background-color: #8d96cf;
+      &:hover {
+        background-color: #c4cbfc;
+        transition: 0.5s;
+      }
+      &:disabled {
+        cursor: not-allowed;
+      }
+    }
+      #shutdown {
         background-color: crimson;
         &:hover {
           background-color: rgb(252, 126, 151);
           transition: 0.5s;
+        }
+        &:disabled {
+          cursor: not-allowed;
         }
       }
     }
@@ -112,13 +95,46 @@
       font-weight: bold;
       color: #8d96cf;
       margin-bottom: 15px;
-      font-style: 14px;
     }
     .icon {
       font-size: 18px;
       padding: 5px;
       border-radius: 5px;
       align-self: flex-end;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .video {
+    flex-direction: column;
+
+    .left, .right {
+      width: 100%;
+      .cam img {
+        width: 100%;
+        height: auto;
+      }
+      .videoTitle {
+        font-size: 12px;
+      }
+    }
+
+    .center {
+      width: 100%;
+      
+      .colorPicker {
+        padding: 20px;
+      }
+      .button {
+        flex-direction: column;
+        gap: 10px;
+        button {
+          width: 100%;
+          height: 40px;
+          font-size: 12px;
+        }
+      }
     }
   }
 }
