--- a/src/components/widget/widget.scss
+++ b/src/components/widget/widget.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   flex: 1;
-  padding: 10px;
+  padding: 15px;
   -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
   box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
   border-radius: 10px;
@@ -16,7 +16,7 @@
 
     .title {
       font-weight: bold;
-      font-style: 14px;
+      font-size: 14px; /* Corrected from font-style */
       color: #8d96cf;
     }
 
@@ -51,6 +51,27 @@
       padding: 5px;
       border-radius: 5px;
       align-self: flex-end;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .widget {
+    height: auto; 
+    padding: 15px; 
+
+    .left,
+    .right {
+      align-items: flex-start; /* Align items to the start */
+      .icon {
+        align-self: flex-start; /* Ensure icons are aligned to the start */
+      }
+      .link {
+        font-size: 10px;
+      }
+      .title {
+        font-size: 12px; 
+      }
     }
   }
 }
