--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -32,3 +32,36 @@
     }
   }
 }
+
+@media (max-width: 768px) {
+  .home {
+    flex-direction: column;
+
+    .homeContainer {
+      margin-top: 50px;
+      .widgets,
+      .charts {
+        flex-direction: column;
+        padding: 10px;
+        gap: 10px;
+      }
+
+      .videoContainer {
+        padding: 10px;
+      }
+
+      .charts {
+        padding: 5px 10px;
+      }
+
+      .listContainer {
+        padding: 10px;
+        margin: 10px;
+
+        .listTitle {
+          margin-bottom: 10px;
+        }
+      }
+    }
+  }
+}
