--- a/src/components/datatable/datatable.scss
+++ b/src/components/datatable/datatable.scss
@@ -1,6 +1,6 @@
 @import 'react-confirm-alert/src/react-confirm-alert.css';
 .datatable {
-  height: 600px;
+  height: 80vh;
   padding: 20px;
 
   .datatableTitle {
