--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -3,8 +3,8 @@
   flex: 1;
   border-right: 0.5px solid rgb(230, 227, 227);
   min-height: 100vh;
-  min-width: 17vh;
-  max-width: 20vh;
+  min-width: 10%;
+  max-width: 10%;
   background-color: #d1feff;
   transition: transform 0.3s ease-in-out;
   z-index: 999;
@@ -54,7 +54,6 @@
           border-left: 2mm ridge #ff772e;
           border-radius: 2px;
           background-color: #ffff;
-          width: 100%;
         }
       }
       a{
@@ -89,22 +88,6 @@
     display: flex;
     align-items: center;
     margin: 10px;
-
-    .colorOption {
-      width: 20px;
-      height: 20px;
-      border-radius: 5px;
-      border: 1px solid #7451f8;
-      cursor: pointer;
-      margin: 5px;
-
-      &:nth-child(1) {
-        background-color: whitesmoke;
-      }
-      &:nth-child(2) {
-        background-color: #333;
-      }
-    }
   }
 }
 
